--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Hi ! there!! thanks for your contribution!, you are awesome!'' first issue'
+        issue-message: 'Hi ! there!! thanks for your contribution!, you are awesome!'
         pr-message: 'Hey what an input! give us a bit of time to review it! we will be in touch soon'' first pr'
