--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -6,7 +6,7 @@ jobs:
   greeting:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/CIsandbox@master
+    - uses: actions/checkout@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         issue-message: 'Hi ! there!! thanks for your contribution!, you are awesome!'
