add better message

--- a/.github/workflows/issuesmessage.yaml
+++ b/.github/workflows/issuesmessage.yaml
@@ -13,4 +13,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          args: comment "Hello World"
+          args: comment "Thanks for your issue! we are going to work on that"
