--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,13 +9,6 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Print a greeting 
-      env:
-        MY_VAR: Hi there! My name is
-        FIRST_NAME: Mona
-        MIDDLE_NAME: The
-        LAST_NAME: Octocat
-      run: |
-        echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME.:  
-      issue-message: 'Hi ! there!! thanks for your contribution!, you are awesome! - $FIRST_NAME $MIDDLE_NAME $LAST_NAME.'
-      pr-message: 'Hey what an input! give us a bit of time to review it! we will be in touch soon - $FIRST_NAME $MIDDLE_NAME $LAST_NAME.'
+        issue-message: 'Hi ! there!! thanks for your contribution!, you are awesome! '
+        pr-message: 'Hey what an input! please give us a bit of time to review it! We will be in touch soon.'
+      
