--- a/.github/workflows/issuesmessage.yaml
+++ b/.github/workflows/issuesmessage.yaml
@@ -14,3 +14,15 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           args: comment "Thanks for your issue! we are going to work on that"
+  assignme:
+    name: Assign orchid00
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: Assign orchid00
+        uses: actions/github@v1.0.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          args: assign @orchid00
+    
