--- a/.github/workflows/pullrequestmessage.yaml
+++ b/.github/workflows/pullrequestmessage.yaml
@@ -1,14 +1,13 @@
-name: Triage
-on: [push, pull_request]
+name: PR
+on: [pull_request]
 jobs:
-  commentOnPushPR:
+  commentOnPR:
     name: Comment On Pull Request
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: Comment On New Issues
-        uses: actions/github@v1.0.0
+      - uses: actions/github@v1.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          args: comment "Thanks for your input! we can review it and then merge it!"
+          args: comment "Thanks for your input! we will review it in the coming days!"
