--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -7,20 +7,20 @@ on:
        - master
   
 
-name: Render-book
+name: renderbd
 
 jobs:
-  render:
-  name: Render Book
-  runs-on: macOS-latest
-  steps:
-    - uses: actions/checkout@v1
-    - uses: r-lib/actions/setup-r@v1
-    - uses: r-lib/actions/setup-pandoc@v1
-    - name: Install rmarkdown
-      run: Rscript -e 'install.packages(c("rmarkdown","bookdown")'
-    - name: Render Book
-      run: Rscript -e 'bookdown::render_book("index.Rmd")'
+  bookdown:
+    name: Render-Book
+    runs-on: macOS-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: r-lib/actions/setup-r@v1
+      - uses: r-lib/actions/setup-pandoc@v1
+      - name: Install rmarkdown
+        run: Rscript -e 'install.packages(c("rmarkdown","bookdown")'
+      - name: Render Book
+        run: Rscript -e 'bookdown::render_book("index.Rmd")'
     #- name: Commit results
     #   run: |
     #     git commit examples/README.md -m 'Re-build README.Rmd' || echo "No changes to commit"
