--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -21,14 +21,8 @@ jobs:
         run: Rscript -e 'install.packages(c("rmarkdown","bookdown"))'
       - name: Render Book
         run: Rscript -e 'bookdown::render_book("index.Rmd")'
-    #- name: Commit results
-    #   run: |
-    #     git commit examples/README.md -m 'Re-build README.Rmd' || echo "No changes to commit"
-    #     git push https://${{github.actor}}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git HEAD:${{ github.ref }} || echo "No changes to commit"
-    # - name: commit
-    #   run: |
-    #     git add \*.R
-    #     git commit -m 'style'
-    #     - uses: r-lib/actions/pr-push@master
-    #     with:
-    #       repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: GitHub Pages Deploy
+        uses: maxheld83/ghpages@v0.2.1
+        env:
+          BUILD_DIR: _book/ 
+        
