--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -1,19 +1,18 @@
 on:
   push:
-     branches:
-       - master
+    branches:
+      - master
   pull_request:
-     branches:
-       - master
-  
+    branches:
+      - master
 
-name: renderbd
+name: R-CMD-check
 
 jobs:
-  bookdown:
+  R-CMD-check:
     runs-on: ${{ matrix.config.os }}
-    name: ${{ matrix.config.os }} (${{ matrix.config.r }})
 
+    name: ${{ matrix.config.os }} (${{ matrix.config.r }})
 
     strategy:
       fail-fast: false
@@ -24,7 +23,6 @@ jobs:
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       CRAN: ${{ matrix.config.cran }}
-      
 
     steps:
       - uses: actions/checkout@v1
@@ -54,9 +52,11 @@ jobs:
           Rscript -e "remotes::install_github('r-hub/sysreqs')"
           sysreqs=$(Rscript -e "cat(sysreqs::sysreq_commands('DESCRIPTION'))")
           sudo -s eval "$sysreqs"
+
       - name: Install dependencies
-        run: Rscript -e "library(remotes)" -e "update(readRDS('depends.Rds'))" -e "remotes::install_cran('rmarkdown')" -e "remotes::install_cran('bookdown')"  
-        
+        run: Rscript -e "library(remotes)" -e "update(readRDS('depends.Rds'))" -e "remotes::install_cran('rmarkdown')" -e "remotes::install_cran('bookdown')"
+
+
       
       - name: Render Book
         run: Rscript -e 'bookdown::render_book("index.Rmd")'
