--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -18,17 +18,27 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
       - uses: r-lib/actions/setup-pandoc@v1
       - name: Install rmarkdown
-        run: Rscript -e 'install.packages(c("rmarkdown","bookdown")'
+        run: Rscript -e 'install.packages(c("rmarkdown","bookdown"))'
       - name: Render Book
         run: Rscript -e 'bookdown::render_book("index.Rmd")'
-    #- name: Commit results
-    #   run: |
-    #     git commit examples/README.md -m 'Re-build README.Rmd' || echo "No changes to commit"
-    #     git push https://${{github.actor}}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git HEAD:${{ github.ref }} || echo "No changes to commit"
-    # - name: commit
-    #   run: |
-    #     git add \*.R
-    #     git commit -m 'style'
-    #     - uses: r-lib/actions/pr-push@master
-    #     with:
-    #       repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/upload-artifact@v1
+        with:
+          name: _book
+          path: _book/*html
+  
+  ghpages_deploy:
+    name: deploy
+    needs: bookdown
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download _book
+        uses: actions/download-artifact@v1
+        with:
+          name: _book
+      - name: deploy
+        uses: maxheld83/ghpages@v0.2.1
+        env:
+          BUILD_DIR: "_book"
+
+          
+ 
