--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -21,6 +21,8 @@ jobs:
         run: Rscript -e 'install.packages(c("rmarkdown","bookdown"))'
       - name: Render Book
         run: Rscript -e 'bookdown::render_book("index.Rmd")'
+      - name: ls
+        run: ls ./
       - uses: actions/upload-artifact@v1
         with:
           name: _book
