--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,6 +1,6 @@
 book_filename: "github_actions_with_r"
 new_session: true
-output_dir: "docs"
+output_dir: "_book"
 delete_merged_file: true
 language:
   ui:
