--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/upload-artifact@v1
         with:
           name: _book
-          path: _book/*html
+          path: _book/
   
   ghpages_deploy:
     name: deploy
