--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -28,26 +28,30 @@ jobs:
           name: _book
           path: _book/
   
-  #ghpages_deploy:
-  #  name: deploy
-  #  needs: bookdown
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #    - name: Download _book
-  #      uses: actions/download-artifact@v1
-  #      with:
-  #        name: _book
-  #    - name: deploy
-  #      uses: maxheld83/ghpages@v0.2.1
-  #      env:
-  #        BUILD_DIR: "_book"
-
-
-  checkout-and-deploy:
+  ghpages_deploy:
+    name: deploy
+    needs: bookdown
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@master
+      - name: Download _book
+        uses: actions/download-artifact@v1
+        with:
+          name: _book
+      - name: deploy
+        uses: maxheld83/ghpages@v0.2.1
+        env:
+          BUILD_DIR: "_book"
+
+    checkout-and-deploy:
+     runs-on: ubuntu-latest
+     needs: bookdown
+     steps:
+      - name: Checkout
+        uses: actions/checkout@master
+      - names: download
+        uses: actions/download-artifact@v1
+          with:
+           name: _book
     - name: Deploy to GitHub Pages
       uses: Cecilapp/GitHub-Pages-deploy@master
       env:
