--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -28,35 +28,27 @@ jobs:
           name: _book
           path: _book/
   
-  ghpages_deploy:
-    name: deploy
-    needs: bookdown
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download _book
-        uses: actions/download-artifact@v1
-        with:
-          name: _book
-      - name: deploy
-        uses: maxheld83/ghpages@v0.2.1
-        env:
-          BUILD_DIR: "_book"
 
-    checkout-and-deploy:
-     runs-on: ubuntu-latest
-     needs: bookdown
-     steps:
-      - name: Checkout
-        uses: actions/checkout@master
-      - names: download
-        uses: actions/download-artifact@v1
-          with:
-           name: _book
-    - name: Deploy to GitHub Pages
-      uses: Cecilapp/GitHub-Pages-deploy@master
-      env:
-        EMAIL: murray.cadzow@otago.ac.nz               # must be a verified email
-        GH_TOKEN: ${{ secrets.GITHUB_PAT }} # https://github.com/settings/tokens
-        BUILD_DIR: _book/                     # "_site/" by default
+  checkout-and-deploy:
+   runs-on: ubuntu-latest
+   needs: bookdown
+   steps:
+     - name: Checkout
+       uses: actions/checkout@master
+     - name: Download artifact
+       uses: actions/download-artifact@v1.0.0
+       with:
+        # Artifact name
+         name: _book # optional
+    # Destination path
+         path: _book # optional
+    # artifact source
+    
+     - name: Deploy to GitHub Pages
+       uses: Cecilapp/GitHub-Pages-deploy@master
+       env:
+          EMAIL: murray.cadzow@otago.ac.nz               # must be a verified email
+          GH_TOKEN: ${{ secrets.GITHUB_PAT }} # https://github.com/settings/tokens
+          BUILD_DIR: _book/                     # "_site/" by default
     
  
