--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -28,7 +28,9 @@ jobs:
           name: _book
           path: _book/
   
-
+# Need to first create an empty gh-pages branch
+# see https://pkgdown.r-lib.org/reference/deploy_site_github.html
+# and also add secrets for a GITHUB_PAT and EMAIL to the repository
   checkout-and-deploy:
    runs-on: ubuntu-latest
    needs: bookdown
