--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
-Package: CIsandbox
-Title: What the Package Does (One Line, Title Case)
+Package: actions_sandbox
+Title: Github Actions with R
 Version: 0.0.1
 Authors@R: 
     person(given = "First",
