--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -7,7 +7,7 @@ on:
        - master
   
 
-name: renderbd
+name: renderbook
 
 jobs:
   bookdown:
@@ -21,8 +21,6 @@ jobs:
         run: Rscript -e 'install.packages(c("rmarkdown","bookdown"))'
       - name: Render Book
         run: Rscript -e 'bookdown::render_book("index.Rmd")'
-      - name: ls
-        run: "ls _book ; pwd"
       - uses: actions/upload-artifact@v1
         with:
           name: _book
@@ -31,6 +29,7 @@ jobs:
 # Need to first create an empty gh-pages branch
 # see https://pkgdown.r-lib.org/reference/deploy_site_github.html
 # and also add secrets for a GITHUB_PAT and EMAIL to the repository
+# gh-action from Cecilapp/GitHub-Pages-deploy
   checkout-and-deploy:
    runs-on: ubuntu-latest
    needs: bookdown
@@ -40,16 +39,14 @@ jobs:
      - name: Download artifact
        uses: actions/download-artifact@v1.0.0
        with:
-        # Artifact name
+         # Artifact name
          name: _book # optional
-    # Destination path
+         # Destination path
          path: _book # optional
-    # artifact source
-    
      - name: Deploy to GitHub Pages
        uses: Cecilapp/GitHub-Pages-deploy@master
        env:
-          EMAIL: ${{ secrets.EMAIL}}               # must be a verified email
+          EMAIL: ${{ secrets.EMAIL }}               # must be a verified email
           GH_TOKEN: ${{ secrets.GITHUB_PAT }} # https://github.com/settings/tokens
           BUILD_DIR: _book/                     # "_site/" by default
     
