--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,8 @@ Authors@R:
       person(given = "Murray",
            family = "Cadzow",
            role = c("aut"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID")),
+           email = "murray.cadzow@otago.ac.nz",
+           comment = c(ORCID = "0000-0002-2299-4136")),
       person(given = "Paula",
            family = "Martinez",
            role = c("aut"),
