--- a/.github/workflows/deploy_blogdown.yml
+++ b/.github/workflows/deploy_blogdown.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Install packages
         run: |
-          R -e 'install.packages("renv")'
+          R -e 'install.packages("renv", "blogdown")'
           R -e 'renv::restore()'
           
       - name: Install hugo
